@@ -1,5 +1,13 @@
-For the js starts with small letter, import using:
+For import using:
 import * as text from "./node_modules/@sswroom/sswr/text.js";
 
-For the js starts with capital letter, import using:
-import Timestamp from "./node_modules/@sswroom/sswr/data/Timestamp.js";
+cesium.js: Functions for Cesium3D
+data.js: Data handling function/classes for basic use
+geometry.js: Geometry definitions
+leaflet.js: Functions for Leaflet
+map.js: GIS handling functions
+math.js: Functions for calculations
+osm.js: Functions for handling OpenStreetMap data
+text.js: Text/string functions
+unit.js: Functions for unit conversion
+web.js: Web based handing
